- Traduction components-slots Revert some changes

--- a/themes/vue/layout/partials/toc.ejs
+++ b/themes/vue/layout/partials/toc.ejs
@@ -12,7 +12,7 @@
         <li><h3>Transitions & animation</h3></li>
       <% } %>
       <% if (fileName === 'mixins') { %>
-        <li><h3>Réutilisabilité & composition</h3></li>
+        <li><h3>Réusabilité & composition</h3></li>
       <% } %>
       <% if (fileName === 'deployment') { %>
         <li><h3>Outils</h3></li>
