--- a/themes/vue/layout/partials/resources_dropdown.ejs
+++ b/themes/vue/layout/partials/resources_dropdown.ejs
@@ -1,8 +1,8 @@
 <li class="nav-dropdown-container resources">
   <a href="#" class="nav-link">Resources</a><span class="arrow"></span>
   <ul class="nav-dropdown">
-    <li><a href="<%- url_for("/resources/partners.html") %>" class="nav-link">Partners</a></li>
-    <li><a href="<%- url_for("/resources/themes.html") %>" class="nav-link">Themes</a></li>
-    <li><a href="https://github.com/vuejs/awesome-vue" class="nav-link" target="_blank">Awesome Vue</a></li>
+    <li><a href="<%- url_for("/resources/partners.html") %>" class="nav-link">Partenaires</a></li>
+    <li><a href="<%- url_for("/resources/themes.html") %>" class="nav-link">Thèmes</a></li>
+    <li><a href="https://github.com/vuejs/awesome-vue" class="nav-link" target="_blank">Awesome Vue (EN)</a></li>
   </ul>
 </li>
