--- a/themes/vue/layout/partials/vueschool_banner.ejs
+++ b/themes/vue/layout/partials/vueschool_banner.ejs
@@ -1,4 +1,4 @@
-<a id="vs" class="vs-hidden" href="https://vueschool.io/sales/summer-vue?friend=vuejs" target="_blank" rel="noreferrer">
+<!-- <a id="vs" class="vs-hidden" href="https://vueschool.io/sales/summer-vue?friend=vuejs" target="_blank" rel="noreferrer">
   <div class="vs-iso">
     <img src="/images/banners/vs-iso.svg">
   </div>
@@ -19,4 +19,4 @@
   <div id="vs-close" class="vs-close">
     <img src="/images/banners/close.svg" alt="Close">
   </div>
-</a>
+</a> -->
